--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,20 @@
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/real_street
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
 servlet:
   multipart:
-    max-file-size: 30MB
-    max-request-size: 50MB
+    max-file-size: 1GB
+    max-request-size: 1.5GB
+
